--- a/GP16Editor/Resources/Styles/LightTheme.xaml
+++ b/GP16Editor/Resources/Styles/LightTheme.xaml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    x:Class="GP16Editor.Resources.Styles.LightTheme">
     <Color x:Key="PrimaryColor">#512BD4</Color>
     <Color x:Key="SecondaryColor">#DFD8F7</Color>
     <Color x:Key="BackgroundColor">#F2F2F2</Color>
     <Color x:Key="TextColor">#1F1F1F</Color>
+    <Color x:Key="HeaderText">#FFFFFF</Color>
+    <Color x:Key="BorderColor">#CCCCCC</Color>
+    <Color x:Key="ContentBackgroundColor">#FFFFFF</Color>
 </ResourceDictionary>
