--- a/GP16Editor/Views/CompressorView.xaml
+++ b/GP16Editor/Views/CompressorView.xaml
@@ -5,14 +5,10 @@
              xmlns:controls="clr-namespace:GP16Editor.Controls"
              x:DataType="vm:CompressorViewModel"
              x:Class="GP16Editor.Views.CompressorView">
-    <Border Stroke="LightGray" StrokeThickness="1" Padding="5">
-        <VerticalStackLayout>
-        <Label Text="Compressor" FontAttributes="Bold" />
-        
+    <HorizontalStackLayout>
         <controls:CircularSlider LabelText="Sustain" Minimum="0" Maximum="100" Value="{Binding Sustain}" />
         <controls:CircularSlider LabelText="Attack" Minimum="0" Maximum="100" Value="{Binding Attack}" />
         <controls:CircularSlider LabelText="Tone" Minimum="-50" Maximum="50" Value="{Binding Tone}" />
         <controls:CircularSlider LabelText="Level" Minimum="0" Maximum="100" Value="{Binding Level}" />
-    </VerticalStackLayout>
-    </Border>
+    </HorizontalStackLayout>
 </ContentView>
