--- a/GP16Editor/Views/ReverbView.xaml
+++ b/GP16Editor/Views/ReverbView.xaml
@@ -5,10 +5,7 @@
              xmlns:controls="clr-namespace:GP16Editor.Controls"
              x:Class="GP16Editor.Views.ReverbView"
              x:DataType="vm:ReverbViewModel">
-    <Border Stroke="LightGray" StrokeThickness="1" Padding="5">
-        <VerticalStackLayout>
-        <Label Text="Reverb" FontAttributes="Bold" />
-
+    <HorizontalStackLayout>
         <Picker Title="Mode" SelectedItem="{Binding Mode}">
             <Picker.ItemsSource>
                 <x:Array Type="{x:Type x:String}">
@@ -30,7 +27,6 @@
         <controls:CircularSlider LabelText="Pre Delay (ms)" Minimum="0" Maximum="100" Value="{Binding PreDelay}" />
         <controls:CircularSlider LabelText="Effect Level" Minimum="0" Maximum="100" Value="{Binding EffectLevel}" />
         <controls:CircularSlider LabelText="Cutoff (Hz)" Minimum="500" Maximum="8000" Value="{Binding Cutoff}" />
-
-    </VerticalStackLayout>
-    </Border>
+    </HorizontalStackLayout>
 </ContentView>
+
